added company create logic

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,1 +1,9 @@
-Hello World
+<% if user_signed_in? %>
+  <%= form_for Company.new do |f| %>
+    <%= f.label :name, 'Company Name' %>
+    <%= f.text_field :name %>
+    <%= f.submit 'Create' %>
+  <% end %>
+<% else %>
+  Please <%= link_to 'log in', new_user_session_path %> to continue.
+<% end %>
