--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,9 +1,23 @@
-<% if user_signed_in? %>
-  <%= form_for Company.new do |f| %>
-    <%= f.label :name, 'Company Name' %>
-    <%= f.text_field :name %>
-    <%= f.submit 'Create' %>
-  <% end %>
-<% else %>
-  Please <%= link_to 'log in', new_user_session_path %> to continue.
+<%= link_to add_to_slack_link do %>
+  <img alt="Add to Slack" height="40" width="139"
+    src="https://platform.slack-edge.com/img/add_to_slack.png"
+    srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x"
+  />
 <% end %>
+<%# <% if user_signed_in? %>
+  <%#   <%= form_for Company.new do |f| %>
+  <%#     <%= f.label :name, 'Company Name' %>
+<%#     <%= f.text_field :name %>
+<%#     <%= f.submit 'Create' %>
+<%#   <% end %>
+<%# <% else %>
+  <%#   Please <%= link_to 'log in', new_user_session_path %> <%#to continue. %>
+<%#   <br />
+<%#   <br />
+<%#   <%= link_to add_to_slack_link do %>
+  <%#     <img alt="Add to Slack" height="40" width="139"
+<%#       src="https://platform.slack-edge.com/img/add_to_slack.png"
+<%#       srcset="https://platform.slack-edge.com/img/add_to_slack.png 1x, https://platform.slack-edge.com/img/add_to_slack@2x.png 2x"
+<%#     />
+<%#   <% end %>
+<%# <% end %>
